--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   cloud_firestore: ^4.8.1
   cached_network_image: ^3.2.3
   flutter_cache_manager: ^3.3.0
+  flutter_launcher_icons: 
   
   video_player: 
 
@@ -84,7 +85,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+# flutter_icons:
+#   android: "launcher_icon"
+#   ios: true
+#   image_path: "assets/icon/icon.png"
 # The following section is specific to Flutter packages.
 flutter:
 
