web and ios configurations deone

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,7 +62,7 @@ dependencies:
 
   fijkplayer: ^0.10.0
   flutter_riverpod: ^2.3.7
-  video_compress_plus:
+  video_compress:
   percent_indicator: ^4.0.1
   get:
   image_cropper: ^4.0.1
