--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,8 @@ dependencies:
   uuid: ^4.0.0
   intl: ^0.17.0
   file_picker: ^5.5.0
+  flutter_pdfview: ^1.3.2
+  image: ^4.1.3
   
   # gradient_text:
   
