--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   file_picker: ^5.5.0
   flutter_pdfview: ^1.3.2
   image: ^4.1.3
+  google_sign_in: ^6.1.5
   
   # gradient_text:
   
