--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,7 +55,7 @@ dependencies:
   flutter_launcher_icons: 
   
   video_player: 
-
+  async: ^2.8.1
   firebase_messaging: ^14.6.4
   emoji_picker_flutter: ^1.6.1
   gallery_saver: ^2.3.2
@@ -69,13 +69,15 @@ dependencies:
   google_fonts: ^4.0.4
   uuid: ^4.0.0
   intl: ^0.17.0
-  file_picker: ^5.5.0
+  file_picker: ^5.2.10
   flutter_pdfview: ^1.3.2
   image: ^4.1.3
+  better_player: ^0.0.83
 
   path: ^1.8.3
   sqflite: ^2.3.0
   google_sign_in: ^6.1.5
+  pinput: ^3.0.1
   # gradient_text:
   
 
